# UTI-STOCKSIM

./: .gitignore  DUMMY.db  NEWSTK.db  SMOKE.db  TEST.db  pyproject.toml  pytest.ini  stock_sim.db  test_e2e.db  test_smoke.db
stock_sim/: 123.py  PPO+LSTM落地方案.txt  README.md  StockSim项目架构分析报告.md  __init__.py  diag_orders.py  export_snap-1757431590092.csv  export_snap-1757443310337.csv  export_snap-1757443930920.csv  export_snap-1757445047112.csv  export_snap-1757486861919.csv  export_snap-1757487818365.csv  export_snap-1757489804415.csv  export_snap-1757496527691.csv  export_snap-1757587890620.csv  export_snap-1758129650157.csv  export_snap-1758650290715.csv  export_snap-1758650290996.csv  frontend_settings.json  main_backtest.py  pyproject.toml  pytest.ini  settings.py  setup_frontend_entry.py  sitecustomize.py  stock_sim_test.db  structure.md  test_layout.json  tmp_settings_inline.json  关键规则与建议.txt  前端需求.md
stock_sim/.spec-workflow/: session.json
stock_sim/QSS/: button_style_1.qss
stock_sim/agents/: multi_internal_strategies.py  multi_strategy_retail.py  ppo_portfolio_agent.py  retail_client.py  retail_strategy.py  retail_trader.py
stock_sim/app/: __init__.py  event_bridge.py  main.py
stock_sim/backtest/: runner.py
stock_sim/configs/: env_m1.yaml  train_m1.yaml
stock_sim/core/: __init__.py  auction_engine.py  call_auction.py  const.py  imbalance_engine.py  instruments.py  market_data.py  matching_engine.py  matching_engine_extended.py  order.py  order_book.py  ring_buffer.py  snapshot.py  trade.py  validators.py
stock_sim/data_pipeline/: fetch_bars.py  (+1 more)
(+386 files in other folders)
